# advent2021

.github/workflows/: python-app.yml
python/: mypy.ini  pyproject.toml
python/day1/: day1.py
python/tests/: test_day1.py
