[tool.poetry]
name = "advent2021"
version = "0.1.0"
description = ""
authors = ["Roy Williams <rwilliams@lyft.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.11b1"
flake8 = "^4.0.1"
ipython = "^7.30.0"
mypy-extensions = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
